--- a/spirits.html
+++ b/spirits.html
@@ -3,5 +3,7 @@
         // 確保首頁直接跳轉到任務頁
         window.location.replace('tasks.html');
     </script>
+    <script type="module" src="js/base.js"></script>
+    <script type="module" src="js/spirits.js"></script>
 </body>
 </html>
