--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KIDSTEST - 啟動頁</title>
+</head>
 <body>
     <script>
-        // 確保首頁直接跳轉到任務頁
         window.location.replace('tasks.html');
     </script>
 </body>
