--- a/tasks.html
+++ b/tasks.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>任務牆 - KIDSTEST</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body class="page-background">
-    <div id="modal-container" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 transition-opacity duration-300">
-        <div id="modal-content" class="bg-white p-6 rounded-xl shadow-2xl w-11/12 max-w-md transform scale-95 opacity-0 transition-all duration-300">
-            </div>
-    </div>
-    <div id="toast-container" class="fixed top-4 right-4 z-50 space-y-2">
-        </div>
-    <div id="loading-screen" class="fixed inset-0 bg-white flex items-center justify-center z-40">
-        <p class="text-xl font-bold text-primary">載入中... 請稍候</p>
-    </div>
-    <div id="content" class="container-box mx-auto p-4 hidden">
-        <header class="sticky top-0 bg-white/95 backdrop-blur-sm z-30 pt-4 pb-2 border-b border-gray-100">
-            <div id="kid-info" class="flex items-center justify-between text-primary mb-4 p-2 bg-pink-light/30 rounded-full shadow-inner">
-                </div>
-        </header>
-        <main id="view-content" class="py-4 min-h-[500px]">
-            </main>
-    </div>
-    <footer id="footer" class="fixed bottom-0 left-0 right-0 bg-white z-40">
-        <nav id="nav-bar" class="flex justify-around py-3">
-            </nav>
-    </footer>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>任務牆</title>
 
-    <script type="module" src="js/tasks.js"></script>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
+<body class="bg-gray-100 min-h-screen">
+
+  <!-- Header -->
+  <header class="sticky top-0 z-50 bg-white shadow">
+    <div id="kid-info" class="p-4"></div>
+  </header>
+
+  <!-- 主內容（⚠️ 關鍵） -->
+  <main class="p-4 pb-28">
+    <div id="view-content"></div>
+  </main>
+
+  <!-- 底部導覽 -->
+  <nav
+    id="nav-bar"
+    class="fixed bottom-0 left-0 right-0 bg-white border-t shadow flex justify-around py-3 text-xl">
+  </nav>
+
+  <!-- Modal -->
+  <div
+    id="modal-container"
+    class="fixed inset-0 bg-black/50 hidden flex items-center justify-center z-50">
+    <div
+      id="modal-content"
+      class="bg-white rounded-2xl p-6 w-11/12 max-w-md shadow-xl">
+    </div>
+  </div>
+
+  <!-- Toast -->
+  <div
+    id="toast-container"
+    class="fixed top-4 right-4 z-50 space-y-2"></div>
+
+  <!-- ⚠️ 只載入 tasks.js -->
+  <script type="module" src="js/tasks.js"></script>
 </body>
 </html>
